fixed text spilling at tablet view

--- a/css/index.css
+++ b/css/index.css
@@ -334,12 +334,15 @@ body .bottom div p {
   border-radius: 1rem;
   background: #A2A8D3;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
   line-height: 30px;
   margin: 2%;
 }
 @media (max-width: 800px) {
   body .bottom div p {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
   }
 }
 @media (max-width: 800px) {
