--- a/less/home.less
+++ b/less/home.less
@@ -54,7 +54,7 @@ body {
         }
       p {
         @media @tablet {
-          font-size: 1.6rem;
+          font-size: 1.4rem;
         }
         font-size: 2rem;
         padding: 1rem;
@@ -63,6 +63,9 @@ body {
         border-radius: 1rem;
         background: @featurecolor;
         text-align: center;
+        display: flex;
+        justify-content: center;
+        align-content: center;
         line-height: 30px;
         margin: 2%;
         @media @tablet {
